--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   http: ^1.3.0
   provider: ^6.1.4
   tflite_flutter: ^0.11.0
+  package_info_plus: ^8.3.0
+  url_launcher: ^6.3.1
+  share_plus: ^10.1.4
 
 dev_dependencies:
   flutter_test:
